--- a/css/topNav.css
+++ b/css/topNav.css
@@ -1,13 +1,13 @@
 #navTop {
-  padding:0px 0px 0px 200px; 
-  margin:0; 
-  list-style:none; 
-  position:relative; 
-  z-index:500;
+  padding: 0px 0px 0px 200px;
+  margin: 0;
+  list-style: none;
+  position: relative;
+  z-index: 500;
 }
 
 #navTop li.top {
-  float:left;
+  float: left;
   padding: 0.85rem;
   color: #fff;
   background-color: #151515;
@@ -15,52 +15,143 @@
   transition: all .25s ease-in;
 }
 
-#navTop li.top:hover {color: rgba(255, 255, 255, 0.5);  background: #030303;}
+#navTop li.top:hover {
+  color: rgba(255, 255, 255, 0.5);
+  background: #030303;
+}
 
 #navTop li a.top_link {
-  display:block;
-  height:36px; 
-  line-height:27px;
-  text-decoration:none; 
-  font-size:16px;
-  padding:0 0 0 12px; 
-  cursor:pointer;
+  display: block;
+  height: 36px;
+  line-height: 27px;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 0 0 0 12px;
+  cursor: pointer;
   background: transparent;
 }
 
-#navTop li a.top_link span {float:left; display:block; padding:0 24px 0 12px; height:36px;background:transparent;}
-#navTop li a.top_link span.down {float:left; display:block; padding:0 24px 0 12px; height:36px; background:transparent;}
+#navTop li a.top_link span {
+  float: left;
+  display: block;
+  padding: 0 24px 0 12px;
+  height: 36px;
+  background: transparent;
+}
 
-/* Default list styling */
-#navTop li:hover {position:relative; z-index:200;}
+#navTop li a.top_link span.down {
+  float: left;
+  display: block;
+  padding: 0 24px 0 12px;
+  height: 36px;
+  background: transparent;
+}
 
-#navTop ul, 
+#navTop li:hover {
+  position: relative;
+  z-index: 200;
+}
+
+#navTop ul,
 #navTop li:hover ul ul,
 #navTop li:hover ul li:hover ul ul,
 #navTop li:hover ul li:hover ul li:hover ul ul,
-#navTop li:hover ul li:hover ul li:hover ul li:hover ul ul
-{position:absolute; left:-9999px; top:-9999px; width:0; height:0; margin:0; padding:0; list-style:none;}
+#navTop li:hover ul li:hover ul li:hover ul li:hover ul ul {
+  position: absolute;
+  left: -9999px;
+  top: -9999px;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
-#navTop li:hover ul.sub
-{left:14px; top:50px; background:#252525; border:1px solid #454545; white-space:nowrap; width:180px; height:auto; z-index:300;}
-#navTop li:hover ul.sub li
-{display:block; height:auto; position:relative; float:left; width:160px; font-weight:normal;}
-#navTop li:hover ul.sub li a
-{display:block; font-size:16px; height:auto; width:160px; line-height:30px; text-indent:5px; color:#fff; text-decoration:none;}
-#navTop li:hover ul.sub li a:hover 
-{color: rgba(255, 255, 255, 0.5);  background:#030303;width:178px;}
+#navTop li:hover ul.sub {
+  left: 14px;
+  top: 50px;
+  background: #252525;
+  border: 1px solid #454545;
+  white-space: nowrap;
+  width: 180px;
+  height: auto;
+  z-index: 300;
+}
 
-#navTop li:hover ul.sub li ul.sub2
-{left:178px; background:#252525;border:1px solid #454545;padding:0px; white-space:nowrap; width:161px;}
-#navTop li:hover ul.sub li ul.sub2 li
-{left:1px;display:block; height:auto; position:relative; float:left; width:159px; font-weight:normal;background:#353535;}
-#navTop li:hover ul.sub li ul.sub2 li a
-{display:block; font-size:16px; height:auto; line-height:30px; text-indent:5px; color:#fff; text-decoration:none;background:#353535;width:159px; }
-#navTop li:hover ul.sub li ul.sub2 li a:hover 
-{color: rgba(255, 255, 255, 0.5);  background: #232323; width:159px; }
+#navTop li:hover ul.sub li {
+  display: block;
+  height: auto;
+  position: relative;
+  float: left;
+  width: 160px;
+  font-weight: normal;
+}
+
+#navTop li:hover ul.sub li a {
+  display: block;
+  font-size: 16px;
+  height: auto;
+  width: 160px;
+  line-height: 30px;
+  text-indent: 5px;
+  color: #fff;
+  text-decoration: none;
+}
+
+#navTop li:hover ul.sub li a:hover {
+  color: rgba(255, 255, 255, 0.5);
+  background: #030303;
+  width: 178px;
+}
+
+#navTop li:hover ul.sub li ul.sub2 {
+  left: 178px;
+  background: #252525;
+  border: 1px solid #454545;
+  padding: 0px;
+  white-space: nowrap;
+  width: 161px;
+}
+
+#navTop li:hover ul.sub li ul.sub2 li {
+  left: 1px;
+  display: block;
+  height: auto;
+  position: relative;
+  float: left;
+  width: 159px;
+  font-weight: normal;
+  background: #353535;
+}
+
+#navTop li:hover ul.sub li ul.sub2 li a {
+  display: block;
+  font-size: 16px;
+  height: auto;
+  line-height: 30px;
+  text-indent: 5px;
+  color: #fff;
+  text-decoration: none;
+  background: #353535;
+  width: 159px;
+}
+
+#navTop li:hover ul.sub li ul.sub2 li a:hover {
+  color: rgba(255, 255, 255, 0.5);
+  background: #232323;
+  width: 159px;
+}
 
 #navTop li:hover ul li:hover ul,
 #navTop li:hover ul li:hover ul li:hover ul,
 #navTop li:hover ul li:hover ul li:hover ul li:hover ul,
-#navTop li:hover ul li:hover ul li:hover ul li:hover ul li:hover ul
-{left:158px; top:-1px; padding:0px; border:1px solid #454545; white-space:nowrap; z-index:400; height:auto;background:#252525s;}
+#navTop li:hover ul li:hover ul li:hover ul li:hover ul li:hover ul {
+  left: 158px;
+  top: -1px;
+  padding: 0px;
+  border: 1px solid #454545;
+  white-space: nowrap;
+  z-index: 400;
+  height: auto;
+  background: #252525s;
+}
